# trendyoft_website

./: __init__.py  add_currency_column.py  asgi.py  check_customers_table.py  check_frontend_readiness.py  check_orders_now.py  check_payment_details.py  check_payment_table.py  check_schema_mismatch.py  comprehensive_database_test.py  database.py  debug_order_placement.py  debug_orders.py  debug_table_structure.py  debug_website.py  diagnose_order_flow.py  fix_data_types.py  fix_database_schema.py  index.html  main.py  migrate_to_railway.py  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.cfg  start.sh  style.css  test_connection.html  test_customer_email.py  test_customer_flow.py  test_email.py  test_order_emails.py  test_order_placement.py  test_place_order.py  test_railway_connection.py  vercel.json  verify_customer_data.py
