[metadata]
name = trendyoft
version = 1.0.0
description = Trendyoft E-commerce Backend API
author = Danish Shaikh
author_email = shaikhdanish.sd06@gmail.com

[options]
python_requires = >=3.11
install_requires = 
    fastapi==0.104.1
    uvicorn[standard]==0.24.0
    PyMySQL==1.1.0
    cryptography==41.0.7
    python-dotenv==1.0.0
    Pillow==10.1.0
    requests==2.31.0
    python-multipart==0.0.6
    pydantic==2.5.0
    typing-extensions>=4.12.0
